@@ -1,4 +1,5 @@
 5.0b1 -> 5.0b2:
+    - rse: DJBX33A hash with unrolling is more better (no need to measure).
     - afb: made it compile on Cygwin too.
     - jbj: add Foo:Bar:Baz indices for now.
     - jbj: permit arbitrary tags to be indexed by "Name", not Tag_0x12345678.
